--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="gameStyle.css">
+        <link rel="stylesheet" href="geoghessr/gameStyle.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
         <title>GeoGhessR</title>
     </head>
@@ -15,7 +15,7 @@
                 <div id="timer">00:00</div>
             </div>
             <div id="map-container">
-                <div id="map"></div>
+                <div id="map" class="map-normal"></div>
                 <button id="valider">Valider</button>
             </div>
         </div>
@@ -31,9 +31,9 @@
 
 
         <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-        <script src="gameScript.js"></script>
+        <script src="geoghessr/gameScript.js"></script>
         <script async 
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCllVkOoWBaq_pRpcRuYJdOFZ6AxgE7Cio&callback=initStreetView">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8oFLXEE_5dtGAK3ORi5ETDQIayHzHpCk&callback=initStreetView">
         </script>
 
     </body>
