réglage bug liens relatifs

--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="geoghessr/gameStyle.css">
+        <link rel="stylesheet" href="gameStyle.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
         <title>GeoGhessR</title>
     </head>
@@ -31,7 +31,7 @@
 
 
         <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-        <script src="geoghessr/gameScript.js"></script>
+        <script src="gameScript.js"></script>
         <script async 
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8oFLXEE_5dtGAK3ORi5ETDQIayHzHpCk&callback=initStreetView">
         </script>
