--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
             <button id="save-btn">SAUVEGARDER</button>
             <button id="back-btn">BACK</button>
         </div>
-        <script src="geoghessr/menuScript.js"></script>
+        <script src="menuScript.js"></script>
     </body>
 </html>
